--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - python manage.py collectstatic --no-input
 script:
   - coverage run --source='django_carousel' manage.py test
-  - pipenv run python manage.py test
+  - flake8
 before_install:
   - pip install coveralls
 after_success:
