--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
    - DATABASE_URL=postgres://postgres@localhost/carouseldb
 install:
   - pip install pipenv
-  - pipenv install
+  - pipenv install --dev
 before_script:
   - psql -c "CREATE DATABASE carouseldb;" -U postgres
   - python manage.py migrate
