--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 install:
   - pip install pipenv
   - pipenv install --dev
+  - pipenv install sqlparse
 before_script:
   - psql -c "CREATE DATABASE carouseldb;" -U postgres
   - python manage.py migrate
