--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: python
 python:
   - "3.6"
@@ -10,7 +11,6 @@ env:
 install:
   - pip install pipenv
   - pipenv install --dev
-  - pipenv install sqlparse
 before_script:
   - psql -c "CREATE DATABASE carouseldb;" -U postgres
   - python manage.py migrate
